Partially fixed calendar styling on Firefox

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,6 @@ header h1 {
 }
 
 tbody {
-    position: relative;
   top: 100px;
 }
 
@@ -159,6 +158,7 @@ tbody tr td {
   overflow-x: hidden;
   transition: all 0.2s;
   cursor: pointer;
+  position: absolute;
 }
 
 .event:hover {
